<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zapyle.zapyle.ProductPage"
    android:background="#FFFFFF"
    android:id="@+id/bpLayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/buyerprotection" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpstring1"
                android:textColor="#000000"
                android:padding="@dimen/margin_5"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:padding="@dimen/margin_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical|top"
                android:padding="@dimen/margin_5">
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:src="@drawable/blackdot"
                    android:layout_marginTop="@dimen/margin_5"
                    />
                <TextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/bp1String"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical|top"
                android:padding="@dimen/margin_5">
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="@dimen/margin_5"
                    android:src="@drawable/blackdot"/>
                <TextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/bp2string"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical|top"
                android:padding="@dimen/margin_5">
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="@dimen/margin_5"
                    android:src="@drawable/blackdot"/>
                <TextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/bp3string"
                    />
            </LinearLayout>




        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:padding="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BPstring2"
                android:textColor="#000000"
                android:padding="@dimen/margin_5"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:padding="@dimen/margin_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical|top"
                android:padding="@dimen/margin_5">
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="@dimen/margin_5"
                    android:src="@drawable/blackdot"/>
                <TextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Zapyle accepts credits and debit cards including Visa,Mastercard,American Express and Discover, as well as payment through Net Banking accounts.For your protection,all transactions are powered by Citrus"/>
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</ScrollView>